--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
           -Dsonar.host.url=https://sonarcloud.io
           -Dsonar.scanner.force-ci-analysis=true
-          -Dsonar.qualitygate.wait=true
+        continue-on-error: true
 
   docker:
     name: Docker Build and Push
