--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+target
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -35,6 +36,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Cluade ###
+.claude
 
 ### Mac OS ###
 .DS_Store
