--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL Database
   db:
@@ -62,6 +60,7 @@ services:
     environment:
       SERVER_PORT: 8081
       NODE_NAME: storage-node-1
+      NODE_HOST: storage-node-1
       NODE_CAPACITY: 10737418240 # 10GB
       LOADBALANCER_HOST: loadbalancer
       LOADBALANCER_PORT: 8080
@@ -85,6 +84,7 @@ services:
     environment:
       SERVER_PORT: 8082
       NODE_NAME: storage-node-2
+      NODE_HOST: storage-node-2
       NODE_CAPACITY: 10737418240 # 10GB
       LOADBALANCER_HOST: loadbalancer
       LOADBALANCER_PORT: 8080
@@ -108,6 +108,7 @@ services:
     environment:
       SERVER_PORT: 8083
       NODE_NAME: storage-node-3
+      NODE_HOST: storage-node-3
       NODE_CAPACITY: 10737418240 # 10GB
       LOADBALANCER_HOST: loadbalancer
       LOADBALANCER_PORT: 8080
