Fix CI/CD pipeline SARIF upload action error
- Replace non-existent securecodewarrior/github-action-add-sarif with official GitHub CodeQL action
- Add proper CodeQL initialization and autobuild steps
- Use github/codeql-action/init, autobuild, and analyze for security scanning
- Fix CI/CD failure caused by invalid action reference
- Maintain continue-on-error for optional security scanning

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -88,10 +88,18 @@ jobs:
         run: |
           docker-compose config --quiet
 
-      - name: Security Scan
-        uses: securecodewarrior/github-action-add-sarif@v1
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          sarif-file: 'security-scan.sarif'
+          languages: java
+        continue-on-error: true
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+        continue-on-error: true
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
         continue-on-error: true
 
       - name: Comment PR Results
